# pkg/api/controllers.go
@@ -424,35 +424,6 @@ func handleNewMinerUser(hotkey string, emailAddress string, organisation string)
 	return newMinerUser, nil
 }
 
-// // MinerInfoController godoc
-// //
-// //	@Summary		Get miner information
-// //	@Description	Retrieve miner information using the miner's user context
-// //	@Tags			Miner
-// //	@Accept			json
-// //	@Produce		json
-// //	@Param			hotkey		path		string										true	"Hot Key"
-// //	@Param			x-api-key	header		string										true	"API Key"
-// //	@Success		200			{object}	ApiResponse{body=miner.MinerInfoResponse}	"Miner information retrieved successfully"
-// //	@Failure		401			{object}	ApiResponse									"Unauthorized"
-// //	@Router			/api/v1/miner/info/{hotkey} [get]
-func MinerInfoController(c *gin.Context) {
-	// minerUserInterface, ok := c.Get("minerUser")
-	//
-	//	if !ok {
-	//		log.Error().Msg("Miner user not found in context")
-	//		c.AbortWithStatusJSON(http.StatusUnauthorized, defaultErrorResponse("Unauthorized"))
-	//		return
-	//	}
-	//
-	// minerUser := minerUserInterface.(*db.MinerUserModel)
-	//
-	//	c.JSON(http.StatusOK, defaultSuccessResponse(miner.MinerInfoResponse{
-	//		MinerId:         minerUser.ID,
-	//		SubscriptionKey: minerUser.SubscriptionKey,
-	//	}))
-}
-
 // WorkerPartnerCreateController godoc
 //
 //	@Summary		Create worker-miner partnership
@@ -715,9 +686,16 @@ func GetTasksByPageController(c *gin.Context) {
 		return
 	}
 
+	paginationParams := task.PaginationParams{
+		Page:  page,
+		Limit: limit,
+		Sort:  sort,
+		Types: taskTypes,
+	}
+
 	// fetching tasks by pagination
 	taskService := task.NewTaskService()
-	taskPagination, taskErrors := taskService.GetTasksByPagination(c.Request.Context(), worker.ID, page, limit, taskTypes, sort)
+	taskPagination, taskErrors := taskService.GetTasksByPagination(c.Request.Context(), worker.ID, paginationParams)
 	if len(taskErrors) > 0 {
 		isBadRequest := false
 		errorDetails := make([]string, 0)
@@ -746,7 +724,6 @@ func GetTasksByPageController(c *gin.Context) {
 	c.JSON(http.StatusOK, defaultSuccessResponse(taskPagination))
 }
 
-// This one not yet documented, since it's not yet added to routes
 func GetTaskResultsController(c *gin.Context) {
 	taskId := c.Param("task-id")
 	if taskId == "" {
@@ -761,13 +738,7 @@ func GetTaskResultsController(c *gin.Context) {
 		return
 	}
 
-	// embed TaskResultModel to reuse its fields
-	// override ResultData, also will shadow the original "result_data" JSON field
-	type taskResultResponse struct {
-		db.TaskResultModel
-		ResultData []task.Result `json:"result_data"`
-	}
-	var formattedTaskResults []taskResultResponse
+	var formattedTaskResults []task.TaskResult
 
 	for _, taskResult := range taskResults {
 		var resultDataItem []task.Result
@@ -778,14 +749,14 @@ func GetTaskResultsController(c *gin.Context) {
 			return
 		}
 
-		tempResult := taskResultResponse{
+		tempResult := task.TaskResult{
 			ResultData:      resultDataItem,
 			TaskResultModel: taskResult,
 		}
 		formattedTaskResults = append(formattedTaskResults, tempResult)
 	}
 
-	c.JSON(http.StatusOK, defaultSuccessResponse(map[string]interface{}{"taskResults": formattedTaskResults}))
+	c.JSON(http.StatusOK, defaultSuccessResponse(task.TaskResultResponse{TaskResults: formattedTaskResults}))
 }
 
 // UpdateWorkerPartnerController godoc
@@ -938,71 +909,6 @@ func parseBool(value interface{}) (*bool, error) {
 		return nil, err
 	}
 	return &valueParsed, nil
-}
-
-// // DisableWorkerByMinerController godoc
-// //
-// //	@Summary		Disable worker by miner
-// //	@Description	Disable a worker by providing the worker's ID and a disable flag
-// //	@Tags			Worker Partner
-// //	@Accept			json
-// //	@Produce		json
-// //	@Param			x-api-key	header		string											true	"API Key"
-// //	@Param			body		body		worker.DisableWorkerRequest						true	"Request body containing the worker ID and disable flag"
-// //	@Success		200			{object}	ApiResponse{body=worker.DisableSuccessResponse}	"Worker disabled successfully"
-// //	@Failure		400			{object}	ApiResponse										"Invalid request body or parameters"
-// //	@Failure		404			{object}	ApiResponse										"Failed to disable worker partner, no records updated"
-// //	@Failure		500			{object}	ApiResponse										"Internal server error - failed to disable worker partner"
-// //	@Router			/api/v1/miner/partner/disable [put]
-func DisableWorkerByMinerController(c *gin.Context) {
-	// var requestMap map[string]interface{}
-	// if err := c.BindJSON(&requestMap); err != nil {
-	// 	log.Error().Err(err).Msg("Failed to bind JSON to requestMap")
-	// 	c.AbortWithStatusJSON(http.StatusBadRequest, defaultErrorResponse("Invalid request body"))
-	// 	return
-	// }
-
-	// const WORKER_KEY = "workerId"
-	// const DISABLE_KEY = "toDisable"
-
-	// workerIdInterface, workerIdExists := requestMap[WORKER_KEY]
-	// workerId, ok := workerIdInterface.(string)
-	// if !workerIdExists || workerId == "" || !ok {
-	// 	c.JSON(http.StatusBadRequest, defaultErrorResponse(WORKER_KEY+" is required and must be a string"))
-	// 	return
-	// }
-
-	// toDisableInterface, toDisableExists := requestMap[DISABLE_KEY]
-	// toDisableOptional, parseError := parseBool(toDisableInterface)
-	// if !toDisableExists || parseError != nil {
-	// 	c.JSON(http.StatusBadRequest, defaultErrorResponse(DISABLE_KEY+" must be a boolean value"))
-	// 	return
-	// }
-	// toDisable := *toDisableOptional
-
-	// minerUserValue, exists := c.Get("minerUser")
-	// if !exists {
-	// 	return
-	// }
-	// minerUser, _ := minerUserValue.(*db.MinerUserModel)
-
-	// log.Info().Str(WORKER_KEY, workerId).Bool(DISABLE_KEY, toDisable).Str("subscriptionKey", minerUser.SubscriptionKey).Msg("Attempting to disable worker by miner")
-
-	// if toDisable {
-
-	// 	count, err := orm.NewWorkerPartnerORM().DisablePartnerByMiner(workerId, minerUser.SubscriptionKey, toDisable)
-	// 	if err != nil {
-	// 		c.JSON(http.StatusInternalServerError, defaultErrorResponse("Failed to disable worker partner"))
-	// 		return
-	// 	}
-	// 	if count > 0 {
-	// 		c.JSON(http.StatusOK, defaultSuccessResponse(worker.DisableSuccessResponse{Message: "Worker disabled successfully"}))
-	// 	} else {
-	// 		c.JSON(http.StatusNotFound, defaultErrorResponse("Failed to disable worker partner, no records updated"))
-	// 	}
-	// } else {
-	// 	c.JSON(http.StatusBadRequest, defaultErrorResponse("Invalid request param"))
-	// }
 }
 
 // GenerateNonceController godoc
@@ -1565,6 +1471,17 @@ func MinerSubscriptionKeyDisableController(c *gin.Context) {
 	c.JSON(http.StatusOK, defaultSuccessResponse(miner.MinerSubscriptionKeysResponse{SubscriptionKeys: updatedSubscriptionKeys}))
 }
 
+// GetNextInProgressTaskController handles GET request to fetch the next in-progress task by task ID.
+// @Summary Get next in-progress task by task ID
+// @Description Fetch the next in-progress task by providing the task ID
+// @Tags Tasks
+// @Accept json
+// @Produce json
+// @Param task-id path string true "Task ID"
+// @Success 200 {object} ApiResponse{body=task.NextTaskResponse} "Successful operation"
+// @Failure 400 {object} ApiResponse "Invalid request, task id is required"
+// @Failure 500 {object} ApiResponse "Failed to get next in-progress task"
+// @Router /next-in-progress-task/{task-id} [get]
 func GetNextInProgressTaskController(c *gin.Context) {
 	// session, err := handleCurrentSession(c)
 	taskId := c.Param("task-id")
